# sentinel-ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.celery  README.md  SECURITY.md  claude.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.audit.txt  requirements.txt  run_db_tests.sh  test_runbook.md
.github/workflows/: _audit.yml  _sast.yml  _style.yml  _test.yml  ci.yml
api/: __init__.py  database.py  docker-entrypoint.sh  logging_config.json  main.py  metrics.py
api/agents/: __init__.py  graph.py  incident_agent.py  log_agent.py  metrics_agent.py  runbook_agent.py  synthesis_agent.py
api/models/: __init__.py  agent_run.py  base.py  incident.py  runbook.py  user.py  vector.py
api/routers/: __init__.py  agents.py  health.py  incidents.py  runbooks.py
api/tasks/: __init__.py  celery_app.py
api/tools/: __init__.py  loki.py  prometheus.py  runbooks.py
ingestion/: __init__.py
monitoring/grafana/dashboards/: dashboards.yml
monitoring/loki/: loki-config.yml
monitoring/nginx/: nginx.conf
monitoring/nginx/conf.d/: sentinel.conf
monitoring/postgres/: init-vectordb.sql  init.sql
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: backend-entrypoint.sh  celery-entrypoint.sh  deploy-swarm.sh  generate-secrets.sh  remove-swarm.sh  update-swarm.sh
secrets/: .gitignore  README.md  db_password.txt.example  google_api_key.txt.example  openai_api_key.txt.example
tests/: README.md  TESTING_IMPROVEMENTS.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_metrics.py
tests/unit/: test_agents_router.py  test_agents_router.py.backup  test_celery.py  test_database.py  test_database_dependencies.py  test_fixtures.py  test_graph_skeleton.py  test_health_router.py  test_incident_agent.py  test_incidents_router.py  test_log_agent.py  test_loki_tool.py  test_main.py  test_metrics_agent.py  test_prometheus_tool.py  test_runbook_agent.py  test_runbooks_router.py  test_synthesis_agent.py
